# Databricks-App_DE-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
de_agent/: __init__.py
de_agent/agent/: graph.py  state.py
de_agent/agent/nodes/: __init__.py  _helpers.py  bronze.py  clarification.py  finalize.py  gold_build.py  gold_reasoning.py  notebook_generation.py  planning.py  profiling.py  silver.py
de_agent/agent/prompts/: documentation.md  planning.md  sql_generation.md
de_agent/config/: __init__.py
de_agent/domain/: __init__.py  plan.py
de_agent/services/: container.py
de_agent/services/artifacts/: __init__.py
de_agent/services/databricks/: fake.py  models.py  service.py
de_agent/services/llm/: base.py  databricks_client.py
de_agent/services/profiling/: profiler.py
de_agent/services/validation/: __init__.py  validators.py
de_agent/ui/: state_bridge.py
de_agent/ui/components/: artifact_panel.py  chat_panel.py  stage_tracker.py
docs/: architecture.md  prompt-changelog.md  runbook.md
scripts/: deploy.sh  export_requirements.sh  run_local.sh
src/de_agent/agent/: __init__.py  checkpointer.py  edges.py
src/de_agent/agent/nodes/: environment_setup.py  gold_planning.py  planning.py  profiling.py
src/de_agent/agent/prompts/: clarification.md  error_correction.md  gold_reasoning.md
src/de_agent/config/: logging.py  settings.py
src/de_agent/domain/: dataset.py  schema.py
src/de_agent/services/: container.py
src/de_agent/services/artifacts/: documentation.py  lineage.py  versioning.py
src/de_agent/services/databricks/: __init__.py  base.py  service.py
src/de_agent/services/llm/: __init__.py  factory.py  fake.py  groq_client.py
src/de_agent/services/profiling/: __init__.py
src/de_agent/ui/: main.py  theme.py
src/de_agent/ui/components/: sidebar.py
tests/: conftest.py
tests/fixtures/: dummy_orders.csv
tests/integration/: test_graph_flow.py
tests/unit/: test_nodes.py  test_services.py
