[project]
name = "de-agent"
version = "0.1.0"
description = "Autonomous Databricks Medallion (Bronze/Silver/Gold) data engineering agent built on LangGraph."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DE Agent Team" }]

dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "databricks-sdk>=0.40.0",
    "databricks-sql-connector>=3.4.0",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "groq>=0.13.0",
    "jinja2>=3.1.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/de_agent"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "TID",           # tidy imports
    "RUF",
]
ignore = ["B008"]  # allow function calls in argument defaults (FastAPI/typer style)

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["de_agent"]

[[tool.mypy.overrides]]
module = ["groq.*", "databricks.*", "streamlit.*"]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=de_agent --cov-report=term-missing"
markers = [
    "integration: end-to-end graph tests using fakes",
]
